--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "node-fetch": "^3.3.2",
